@@ -1,3 +1,9 @@
+2015-02-23  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* axis.c:  Special case code for axis tickmarks in polar plots was 
+	incorrectly being applied to all axes, not just the polar axis.
+	Bug #1569
+
 2015-02-18  Shigeharu Takeno  <shige@iee.niit.ac.jp>
 
 	* term/gd.trm (PNG_vector): Prevent accummulated round-off error in
